# marine_heat_waves

./: .gitignore  README.md  pyproject.toml
mhw/: array_utils.py  datasets_utils.py  marine_heat_waves.py  mhw_core.py  mhw_tools.py  stats_and_trends.py  time_utils.py  tools.py
mhwpy/: __init__.py  datasets_utils.py  mhw_core.py  stats_and_trends.py
notebooks/: Tutorial I - libreria MHW M. L. et al.ipynb  Tutorial I - libreria MHW.ipynb  Tutorial II - Ejemplos Plots M. L. Clara et al.ipynb  Tutorial II - Ejemplos de plots M. Luz Clara et al.ipynb  anual_statistics.ipynb  anual_trend.ipynb  marine_heat_waves.ipynb
