[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mhwpy"
version = "1.0.0"
authors = [
  { name = "Santiago Basanes", email = "santi.basanes@gmail.com" }
]
description = "Herramientas de análisis y visualización de Marine HeatWaves"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
]

#  dependencias científicas y de ploteo
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "xarray>=0.20.0",
    "netcdf4>=1.5.7",     
    "matplotlib>=3.4.0",
    "seaborn>=0.13.2",
    "cartopy>=0.20.0",
    "jupyter>=1.0.0",
]

[tool.setuptools]
packages = ["mhwpy"]